[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csb_util"
authors = [{ name = "fieryhenry" }]
description = "Utility for encoding and decoding csb files"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = ["argparse"]
dynamic = ["version"]
keywords = []

[project.urls]
Homepage = "https://github.com/fieryhenry/csb_util"
Repository = "https://github.com/fieryhenry/csb_util"
Issues = "https://github.com/fieryhenry/csb_util/issues"
Changelog = "https://github.com/fieryhenry/csb_util/blob/main/CHANGELOG.md"


[tool.setuptools.dynamic]
version = { attr = "csb_util.__version__" }

[tool.setuptools]
package-dir = { "" = "src" }
